--- a/acme/Makefile
+++ b/acme/Makefile
@@ -12,4 +12,5 @@ release: clean
 	helm lint
 	helm package .
 	helm repo add jx-labs $(CHART_REPO)
-	helm gcs push ${NAME}*.tgz jx-labs --public
+	#helm gcs push ${NAME}*.tgz jx-labs --public
+	helm gcs push ${NAME}*.tgz jx-labs
