chore: move to tekton pipelines and publish to public helm chart repo

--- a/acme/Makefile
+++ b/acme/Makefile
@@ -1,4 +1,4 @@
-CHART_REPO := gs://jenkinsxio-labs-private/charts
+CHART_REPO := gs://jenkinsxio/charts
 NAME := acme
 build: clean
 	helm lint
@@ -12,5 +12,4 @@ release: clean
 	helm lint
 	helm package .
 	helm repo add jx-labs $(CHART_REPO)
-	#helm gcs push ${NAME}*.tgz jx-labs --public
-	helm gcs push ${NAME}*.tgz jx-labs
+	helm gcs push ${NAME}*.tgz jx-labs --public
