--- a/charts/acme/templates/cert-manager-prod-certificate.yaml
+++ b/charts/acme/templates/cert-manager-prod-certificate.yaml
@@ -10,6 +10,9 @@ spec:
   secretName: "tls-{{ .Values.jxRequirements.ingress.domain | replace "." "-" }}-p"
   issuerRef:
     name: letsencrypt-prod
+{{- if .Values.issuer.cluster }}
+    kind: ClusterIssuer
+{{- end }}
   commonName: "*.{{ .Values.jxRequirements.ingress.domain }}"
   dnsNames:
   - "*.{{ .Values.jxRequirements.ingress.domain }}"
