--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -2,8 +2,7 @@ apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
   annotations:
-    lighthouse.jenkins-x.io/prependStepsURL: https://raw.githubusercontent.com/jenkins-x/jx3-pipeline-catalog/4a22dee8a67f66e5012729808de081d2f4d0e715/tasks/git-clone/git-clone.yaml
-  creationTimestamp: null
+    lighthouse.jenkins-x.io/prependStepsURL: https://raw.githubusercontent.com/jenkins-x/jx3-pipeline-catalog/005e78cf69b643862344397a635736a51dd1bd89/tasks/git-clone/git-clone.yaml
   name: release
 spec:
   pipelineSpec:
@@ -32,14 +31,6 @@ spec:
           script: |
             #!/usr/bin/env bash
             jx gitops variables
-        - image: gcr.io/jenkinsxio/jx-cli:3.0.684
-          name: release-chart
-          resources: {}
-          script: |
-            #!/bin/bash
-            if [ -d "/workspace/source/charts/$REPO_NAME" ]; then source .jx/variables.sh
-            cd /workspace/source/charts/$REPO_NAME
-            make release; else echo no charts; fi
         - image: gcr.io/jenkinsxio/jx:2.1.150
           name: promote-changelog
           resources: {}
@@ -53,6 +44,13 @@ spec:
           script: |
             #!/usr/bin/env bash
             jx gitops helm release
+        - image: gcr.io/jenkinsxio/jx-cli:3.0.684
+          name: promote-jx-promote
+          resources: {}
+          script: |
+            #!/bin/bash
+            source /workspace/source/.jx/variables.sh
+            jx promote -b --all-auto --timeout 1h --no-poll
 
   podTemplate: {}
   serviceAccountName: tekton-bot
