--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -43,8 +43,9 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env bash
-            jx gitops helm release
-
+            source /workspace/source/.jx/variables.sh
+            cd charts/acme
+            make release
 
   podTemplate: {}
   serviceAccountName: tekton-bot
