chore: add missing dns name

--- a/charts/acme/templates/cert-manager-prod-certificate.yaml
+++ b/charts/acme/templates/cert-manager-prod-certificate.yaml
@@ -16,5 +16,6 @@ spec:
   commonName: "*.{{ .Values.jxRequirements.ingress.domain }}"
   dnsNames:
   - "*.{{ .Values.jxRequirements.ingress.domain }}"
+  - "{{ .Values.jxRequirements.ingress.domain }}"
 {{- end }}
 {{- end }}
