--- a/charts/acme/templates/cert-manager-staging-issuer.yaml
+++ b/charts/acme/templates/cert-manager-staging-issuer.yaml
@@ -2,7 +2,7 @@
 {{- if not .Values.jxRequirements.ingress.tls.production }}
 {{- if not .Values.issuer.cluster }}
 {{- if .Values.issuer.enabled }}
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: letsencrypt-staging
