--- a/charts/acme/templates/cert-manager-prod-clusterissuer.yaml
+++ b/charts/acme/templates/cert-manager-prod-clusterissuer.yaml
@@ -1,7 +1,7 @@
 {{- if and .Values.jxRequirements.ingress.domain .Values.jxRequirements.ingress.tls.production }}
 {{- if .Values.issuer.cluster }}
 {{- if .Values.issuer.enabled }}
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod
