--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -1,8 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
-  annotations:
-    lighthouse.jenkins-x.io/prependStepsURL: https://raw.githubusercontent.com/jenkins-x/jx3-pipeline-catalog/005e78cf69b643862344397a635736a51dd1bd89/tasks/git-clone/git-clone.yaml
+  creationTimestamp: null
   name: release
 spec:
   pipelineSpec:
@@ -12,6 +11,7 @@ spec:
       taskSpec:
         metadata: {}
         stepTemplate:
+          image: uses:jenkins-x/jx3-pipeline-catalog/tasks/helm/release.yaml@versionStream
           name: ""
           resources:
             requests:
@@ -19,37 +19,15 @@ spec:
               memory: 512Mi
           workingDir: /workspace/source
         steps:
-        - image: gcr.io/jenkinsxio/jx-release-version:1.0.42
-          name: next-version
+        - image: uses:jenkins-x/jx3-pipeline-catalog/tasks/git-clone/git-clone.yaml@versionStream
+          name: ""
           resources: {}
-          script: |
-            #!/usr/bin/env bash
-            VERSION=$(jx-release-version)
-            echo $VERSION > VERSION
-        - image: gcr.io/jenkinsxio/jx-boot:3.0.773
-          name: jx-variables
+        - name: next-version
           resources: {}
-          script: |
-            #!/usr/bin/env sh
-            jx gitops variables
-        - image: gcr.io/jenkinsxio/jx-changelog:0.0.8
-          name: promote-changelog
+        - name: jx-variables
           resources: {}
-          script: |
-            #!/usr/bin/env sh
-            source /workspace/source/.jx/variables.sh
-
-            if [ -d "/workspace/source/charts/$REPO_NAME" ]; then
-            sed -i -e "s/^version:.*/version: $VERSION/" ./charts/$REPO_NAME/Chart.yaml
-            sed -i -e "s/repository:.*/repository: $DOCKER_REGISTRY\/$DOCKER_REGISTRY_ORG\/$APP_NAME/" ./charts/$REPO_NAME/values.yaml
-            sed -i -e "s/tag:.*/tag: $VERSION/" ./charts/$REPO_NAME/values.yaml;
-            else echo no charts; fi
-
-            git commit -a -m "release $VERSION" --allow-empty
-            git tag -fa v$VERSION -m "Release version $VERSION"
-            git push origin v$VERSION
-
-            jx changelog create --version v${VERSION}
+        - name: promote-changelog
+          resources: {}
         - image: gcr.io/jenkinsxio/helm-release:0.0.1
           name: promote-helm-release
           resources: {}
@@ -58,7 +36,6 @@ spec:
             source /workspace/source/.jx/variables.sh
             cd charts/acme
             make release
-
   podTemplate: {}
   serviceAccountName: tekton-bot
   timeout: 240h0m0s
