fix: correct annotation: letsencrypt-staging -> staging

--- a/charts/acme/templates/cert-manager-staging-certificate.yaml
+++ b/charts/acme/templates/cert-manager-staging-certificate.yaml
@@ -6,7 +6,7 @@ kind: Certificate
 metadata:
   name: "tls-{{ .ingress.domain | replace "." "-" }}-s"
   labels:
-    jenkins.io/letsencrypt-service: letsencrypt-staging
+    jenkins.io/letsencrypt-service: staging
 spec:
   secretName: "tls-{{ .ingress.domain | replace "." "-" }}-s"
   issuerRef:
