fix: acme -> acme-environments

--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -34,7 +34,7 @@ spec:
           script: |
             #!/usr/bin/env sh
             source /workspace/source/.jx/variables.sh
-            cd charts/acme
+            cd charts/acme-environments
             make release
   podTemplate: {}
   serviceAccountName: tekton-bot
