fix: get helm plugin; correct helm chart name

--- a/charts/acme-environments/Makefile
+++ b/charts/acme-environments/Makefile
@@ -12,4 +12,5 @@ release: clean
 	helm lint
 	helm package .
 	helm repo add tf-api $(CHART_REPO)
+	helm plugin install https://github.com/chartmuseum/helm-push.git
 	helm push ${NAME}*.tgz tf-api --public
