--- a/charts/acme-environments/Chart.yaml
+++ b/charts/acme-environments/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 description: Acme Environments
-name: acme-envrioments
+name: acme-environments
 version: 0.0.1-SNAPSHOT
 icon: https://avatars2.githubusercontent.com/u/35583233?s=200&v=4
